nova_tests/negative_capability/p53_let_variant_pattern.nv
// EXPECT_COMPILE_ERROR refutable pattern in `let`
//
// Plan 53: variant-patterns требуют tag-check в runtime — `let` гарантирует
// binding, не fallible match. Для variant — `if let` / `match`.

module negative_capability.p53_let_variant_pattern

type Maybe | None | Just(int)

test "variant pattern in ro — refutable" {
    ro m = Maybe.Just(5)
    ro Just(x) = m
    assert(x == 5)
}
